nested/azuremlvm.json
{
    "$schema": "http://schema.management.azure.com/schemas/2015-01-01/deploymentTemplate.json#",
    "contentVersion": "1.0.0.0",
    "parameters": {
        "azuremlSettings": {
            "type": "object"
        },
        "vnetSettings":{
            "type": "object"
        }
    },
    "variables": {
        "vnetId": "[resourceId('Microsoft.Network/virtualNetworks', parameters('vnetSettings').vnetName)]",
        "subnetRef": "[concat(variables('vnetId'), '/subnets/', parameters('vnetSettings').subnetName3)]"
    },
    "resources": [
        {
            "name": "[parameters('azuremlSettings').mlVmName]",
            "type": "Microsoft.Compute/virtualMachines",
            "apiVersion": "2016-04-30-preview",
            "location": "[parameters('azuremlSettings').location]",
            "dependsOn": [
                "[concat('Microsoft.Network/networkInterfaces/', parameters('azuremlSettings').networkInterfaceName)]"
            ],
            "properties": {
                "osProfile": {
                    "computerName": "[parameters('azuremlSettings').mlVmName]",
                    "adminUsername": "[parameters('azuremlSettings').mlUsername]",
                    "adminPassword": "[parameters('azuremlSettings').mlPassword]",
                    "windowsConfiguration": {
                        "provisionVmAgent": "true"
                    }
                },
                "hardwareProfile": {
                    "vmSize": "Standard_D2S_v3"
                },
                "storageProfile": {
                    "imageReference": {
                        "publisher": "[parameters('azuremlSettings').imagePublisher]",
                        "offer": "[parameters('azuremlSettings').imageOffer]",
                        "sku": "[parameters('azuremlSettings').sku]",
                        "version": "latest"
                    },
                    "osDisk": {
                        "createOption": "fromImage",
                        "managedDisk": {
                            "storageAccountType": "Standard_LRS"
                        }
                    },
                    "dataDisks": []
                },
                "networkProfile": {
                    "networkInterfaces": [
                        {
                            "id": "[resourceId('Microsoft.Network/networkInterfaces', parameters('azuremlSettings').networkInterfaceName)]"
                        }
                    ]
                }
            }
        },
        {
            "name": "[parameters('azuremlSettings').networkInterfaceName]",
            "type": "Microsoft.Network/networkInterfaces",
            "apiVersion": "2017-08-01",
            "location": "[parameters('azuremlSettings').location]",
            "dependsOn": [
                "[concat('Microsoft.Network/publicIpAddresses/', parameters('azuremlSettings').publicIpAddressName)]",
                "[concat('Microsoft.Network/networkSecurityGroups/', parameters('azuremlSettings').networkSecurityGroupName)]"
            ],
            "properties": {
                "ipConfigurations": [
                    {
                        "name": "ipconfig1",
                        "properties": {
                            "subnet": {
                                "id": "[variables('subnetRef')]"
                            },
                            "privateIPAllocationMethod": "Dynamic",
                            "publicIpAddress": {
                                "id": "[resourceId('Microsoft.Network/publicIpAddresses', parameters('azuremlSettings').publicIpAddressName)]"
                            }
                        }
                    }
                ],
                "networkSecurityGroup": {
                    "id": "[resourceId('Microsoft.Network/networkSecurityGroups', parameters('azuremlSettings').networkSecurityGroupName)]"
                }
            }
        },
        {
            "name": "[parameters('azuremlSettings').publicIpAddressName]",
            "type": "Microsoft.Network/publicIpAddresses",
            "apiVersion": "2017-08-01",
            "location": "[parameters('azuremlSettings').location]",
            "properties": {
                "publicIpAllocationMethod": "[parameters('azuremlSettings').publicIpAddressType]",
                "dnsSettings": {
                    "domainNameLabel": "[parameters('azuremlSettings').dnsLabelPrefix]"
                }
            },
            "sku": {
                "name": "[parameters('azuremlSettings').publicIpAddressSku]"
            }
        },
        {
            "name": "[parameters('azuremlSettings').networkSecurityGroupName]",
            "type": "Microsoft.Network/networkSecurityGroups",
            "apiVersion": "2018-01-01",
            "location": "[parameters('azuremlSettings').location]",
            "properties": {
                "securityRules": [
                    {
                        "name": "RDP",
                        "properties": {
                            "priority": 1000,
                            "protocol": "TCP",
                            "access": "Allow",
                            "direction": "Inbound",
                            "sourceApplicationSecurityGroups": [],
                            "destinationApplicationSecurityGroups": [],
                            "sourceAddressPrefix": "*",
                            "sourcePortRange": "*",
                            "destinationAddressPrefix": "*",
                            "destinationPortRange": "3389"
                        }
                    },
                    {
                        "name": "HTTPS",
                        "properties": {
                            "priority": 1001,
                            "sourceAddressPrefix": "*",
                            "protocol": "TCP",
                            "destinationPortRange": "443",
                            "access": "Allow",
                            "direction": "Inbound",
                            "sourcePortRange": "*",
                            "destinationAddressPrefix": "*"
                        }
                    },
                    {
                        "name": "HTTPS1",
                        "properties": {
                            "priority": 1002,
                            "sourceAddressPrefix": "*",
                            "protocol": "TCP",
                            "destinationPortRange": "443",
                            "access": "Allow",
                            "direction": "Outbound",
                            "sourcePortRange": "*",
                            "destinationAddressPrefix": "*"
                        }
                    },
                    {
                        "name": "winrm",
                        "properties": {
                            "protocol": "*",
                            "sourcePortRange": "*",
                            "destinationPortRange": "5986",
                            "sourceAddressPrefix": "*",
                            "destinationAddressPrefix": "*",
                            "access": "Allow",
                            "priority": 1011,
                            "direction": "Inbound"
                        }
                    },
                    {
                        "name": "security",
                        "properties": {
                            "protocol": "*",
                            "sourcePortRange": "*",
                            "destinationPortRange": "5724",
                            "sourceAddressPrefix": "*",
                            "destinationAddressPrefix": "*",
                            "access": "Allow",
                            "priority": 1012,
                            "direction": "Inbound"
                        }
                    },
                    {
                        "name": "security1",
                        "properties": {
                            "protocol": "*",
                            "sourcePortRange": "*",
                            "destinationPortRange": "5724",
                            "sourceAddressPrefix": "*",
                            "destinationAddressPrefix": "*",
                            "access": "Allow",
                            "priority": 1013,
                            "direction": "Outbound"
                        }
                    }
                ]
            }
        },
        {
            "name": "[concat(parameters('azuremlSettings').mlVmName,'/CustomScriptExtension')]",
            "type": "Microsoft.Compute/virtualMachines/extensions",
            "location": "[parameters('azuremlSettings').location]",
            "apiVersion": "2016-04-30-preview",
            "dependsOn": [
                "[concat('Microsoft.Compute/virtualMachines/',parameters('azuremlSettings').mlVmName)]"
            ],
            "properties": {
                "publisher": "Microsoft.Compute",
                "type": "CustomScriptExtension",
                "typeHandlerVersion": "1.8",
                "autoUpgradeMinorVersion": true,
                "settings": {
                    "fileUris": [
                        "[parameters('azuremlSettings').mlUrl]"
                    ]
                },
                "protectedSettings": {
                    "commandToExecute": "[concat ('powershell -ExecutionPolicy Unrestricted -File customscript.ps1',' ',parameters('azuremlSettings').installdocker)]"
                }
            }
        }
    ],
    "outputs": {
        "hostname": {
            "type": "string",
            "value": "[reference(parameters('azuremlSettings').publicIpAddressName).dnsSettings.fqdn]"
          }
    }
}
